--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -1,6 +1,6 @@
 SET(ITK_LIBRARY "ITKCommonA")
 STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
-SET(ITK_LANG_FILE "${ITK_BINARY_DIR}/Wrapping/CSwig/Python/${ITK_LIBRARY_LANG}")
+SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/Python/${ITK_LIBRARY_LANG}")
 WRITE_LANG_BEGIN("itkcommon")
 
 SET(WrapITK_PART_DIR "${WrapITK_BINARY_DIR}/CommonA")
@@ -77,7 +77,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 SET(MASTER_INDEX_FILES "${WrapITK_BINARY_DIR}/VXLNumerics/VXLNumerics.mdx"
                        "${WrapITK_BINARY_DIR}/CommonA/ITKCommonA.mdx"
 )
-SET(ITK_SWIG_FILE ${ITK_TOP}/Wrapping/CSwig/CommonA/SwigExtras.i)
+SET(ITK_SWIG_FILE ${WrapITK_SOURCE_DIR}/CommonA/SwigExtras.i)
 SET(ITK_SWIG_FILE_CXX ${WrapITK_BINARY_DIR}/CommonA/SwigExtras_wrap)
 
 SET(ITK_EXTRA_TCL_SOURCES itkTclCommand.cxx)
