--- a/IO/CMakeLists.txt
+++ b/IO/CMakeLists.txt
@@ -1,6 +1,6 @@
 SET(ITK_LIBRARY "ITKIO")
 STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
-SET(ITK_LANG_FILE "${ITK_BINARY_DIR}/Wrapping/CSwig/Python/${ITK_LIBRARY_LANG}")
+SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/Python/${ITK_LIBRARY_LANG}")
 WRITE_LANG_BEGIN(${ITK_LIBRARY_LANG})
 
 SET(WrapITK_PART_DIR "${WrapITK_BINARY_DIR}/IO")
@@ -44,9 +44,9 @@ SET(ITK_EXTRA_TCL_WRAP wrap_itkTkImageViewer2D)
 ITK_WRAP_LIBRARY("${WRAP_GROUPS}" ITKIO IO "ITKNumerics;ITKCommonA;ITKCommonB" "" ""
   "${MASTER_INDEX_FILES}" "${WrapITK_SOURCE_DIR}" "${WrapITK_BINARY_DIR}")
 
-IF(ITK_CSWIG_TCL)
+IF(WRAP_ITK_TCL)
   TARGET_LINK_LIBRARIES(ITKIOTcl ${TK_LIBRARY})
-ENDIF(ITK_CSWIG_TCL)
+ENDIF(WRAP_ITK_TCL)
 
 #------------------------------------------------------------------------------
 WRITE_LANG_END()
