--- a/SwigRuntime/CMakeLists.txt
+++ b/SwigRuntime/CMakeLists.txt
@@ -14,24 +14,24 @@ SET_SOURCE_FILES_PROPERTIES(${WrapITK_BINARY_DIR}/SwigRuntime/swigrunPython.cxx 
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
-IF(ITK_CSWIG_TCL)
+IF(WRAP_ITK_TCL)
   ADD_LIBRARY(SwigRuntimeTcl SHARED ${WrapITK_BINARY_DIR}/SwigRuntime/swigrunTcl.cxx)
   SET_TARGET_PROPERTIES(SwigRuntimeTcl PROPERTIES LINK_FLAGS "${CSWIG_EXTRA_LINKFLAGS}")
   TARGET_LINK_LIBRARIES(SwigRuntimeTcl ${TCL_LIBRARY})
   INSTALL_TARGETS(/lib/InsightToolkit SwigRuntimeTcl)
-ENDIF(ITK_CSWIG_TCL)
+ENDIF(WRAP_ITK_TCL)
 
-IF(ITK_CSWIG_PYTHON)
+IF(WRAP_ITK_PYTHON)
   ADD_LIBRARY(SwigRuntimePython SHARED ${WrapITK_BINARY_DIR}/SwigRuntime/swigrunPython.cxx)
   TARGET_LINK_LIBRARIES(SwigRuntimePython ${PYTHON_LIBRARY})
   INSTALL_TARGETS(/lib/InsightToolkit SwigRuntimePython)
-ENDIF(ITK_CSWIG_PYTHON)
+ENDIF(WRAP_ITK_PYTHON)
 
-IF(ITK_CSWIG_PERL)
+IF(WRAP_ITK_PERL)
   ADD_LIBRARY(SwigRuntimePerl SHARED ${WrapITK_BINARY_DIR}/SwigRuntime/swigrunPerl.cxx)
   TARGET_LINK_LIBRARIES(SwigRuntimePerl "${PERL_LIBRARY}")
   INSTALL_TARGETS(/lib/InsightToolkit SwigRuntimePerl)
-ENDIF(ITK_CSWIG_PERL)
+ENDIF(WRAP_ITK_PERL)
 
 MACRO(CREATE_SWIG_RUNTIME LangOption LibName LangPostFix)
      ADD_CUSTOM_COMMAND(
@@ -53,19 +53,19 @@ MACRO(CREATE_SWIG_RUNTIME LangOption LibName LangPostFix)
     DEPENDS ${CSWIG})
 ENDMACRO(CREATE_SWIG_RUNTIME)
 
-IF(ITK_CSWIG_TCL)
+IF(WRAP_ITK_TCL)
    CREATE_SWIG_RUNTIME(-tcl SwigRuntimeTcl Tcl)
-ENDIF(ITK_CSWIG_TCL)
+ENDIF(WRAP_ITK_TCL)
 
-IF(ITK_CSWIG_PYTHON)
+IF(WRAP_ITK_PYTHON)
    CREATE_SWIG_RUNTIME(-python SwigRuntimePython Python)
-ENDIF(ITK_CSWIG_PYTHON)
+ENDIF(WRAP_ITK_PYTHON)
 
-IF(ITK_CSWIG_PERL)
+IF(WRAP_ITK_PERL)
    CREATE_SWIG_RUNTIME(-perl5 SwigRuntimePerl Perl)
-ENDIF(ITK_CSWIG_PERL)
+ENDIF(WRAP_ITK_PERL)
 
-IF(ITK_CSWIG_JAVA)
+IF(WRAP_ITK_JAVA)
   SET_SOURCE_FILES_PROPERTIES(${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx GENERATED)
   ADD_LIBRARY(SwigRuntimeJava MODULE ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx JavaCWD.cxx)
   INSTALL_TARGETS(${ITK_INSTALL_JAVA_LIBS_DIR} SwigRuntimeJava)
@@ -81,5 +81,5 @@ IF(ITK_CSWIG_JAVA)
         TARGET ${LIBRARY_NAME}Java
         OUTPUTS ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx
         DEPENDS ${WrapITK_SOURCE_DIR}/SwigRuntime/JavaCWD.i ${CSWIG})
-ENDIF(ITK_CSWIG_JAVA)
+ENDIF(WRAP_ITK_JAVA)
 
