--- a/Tcl/pkgIndex.tcl.in
+++ b/Tcl/pkgIndex.tcl.in
@@ -8,8 +8,8 @@ namespace eval itk {
   #   version = the version number of the package
   #
   proc ConfigureTclPackage {libName version} {
-    set libPrefix "@ITK_CSWIG_LIBNAME_PREFIX@"
-    set libPath "@ITK_CSWIG_PACKAGE_DIR@"
+    set libPrefix "@WRAP_ITK_LIBNAME_PREFIX@"
+    set libPath "@WRAP_ITK_PACKAGE_DIR@"
     set libExt [info sharedlibextension]
     set libFile [file join $libPath "$libPrefix$libName$libExt"]
     set package [string tolower $libName]
@@ -74,24 +74,24 @@ namespace eval itk {
     "
 
     package ifneeded itkinteraction $version "
-      set src \[file join \"@ITK_CSWIG_SCRIPT_DIR@\" itkinteraction.tcl\]
+      set src \[file join \"@WRAP_ITK_SCRIPT_DIR@\" itkinteraction.tcl\]
       if {\[catch { source \"\$src\" } errorMessage \]} { puts \$errorMessage } \\
       else { package provide itkinteraction $version }
     "
 
     package ifneeded itkdata $version "
-      set src \[file join \"@ITK_CSWIG_SCRIPT_DIR@\" itkdata.tcl\]
+      set src \[file join \"@WRAP_ITK_SCRIPT_DIR@\" itkdata.tcl\]
       namespace eval itk::data {
-        set defaultDataRoot \"@ITK_CSWIG_DATA_ROOT@\"
+        set defaultDataRoot \"@WRAP_ITK_DATA_ROOT@\"
       }
       if {\[catch { source \"\$src\" } errorMessage \]} { puts \$errorMessage } \\
       else { package provide itkdata $version }
     "
 
     package ifneeded itktesting $version "
-      set src \[file join \"@ITK_CSWIG_SCRIPT_DIR@\" itktesting.tcl\]
+      set src \[file join \"@WRAP_ITK_SCRIPT_DIR@\" itktesting.tcl\]
       namespace eval itk::testing {
-        set defaultTestRoot \"@ITK_CSWIG_TEST_ROOT@\"
+        set defaultTestRoot \"@WRAP_ITK_TEST_ROOT@\"
       }
       if {\[catch { source \"\$src\" } errorMessage \]} { puts \$errorMessage } \\
       else { package provide itktesting $version }
