UNDO: fix build (but not install for now)
darcs-hash:20060106222016-2fc9d-13466c6cc3e8680c1043ac9f55d77d3b229e6718.gz

--- a/SpatialObject/CMakeLists.txt
+++ b/SpatialObject/CMakeLists.txt
@@ -9,7 +9,7 @@ SET(WrapITK_PART_DIR "${WrapITK_BINARY_DIR}/SpatialObject")
 # create a list of groups
 # Add here modules that must be imported before the others.
 SET(WRAP_GROUPS
-#  itkSpatialObject
+  itkSpatialObject
 )
 
 # include every wrap_*.cmake files in the directory
