Fix for OS X case-sensitivity: renamed "SpatialObject" wrapper lib to "SpatialObjects"
darcs-hash:20060108101027-733a7-5ca847f39c45668e657209c2bbc92968787c3909.gz

--- a/SpatialObjects/CMakeLists.txt
+++ b/SpatialObjects/CMakeLists.txt
@@ -1,9 +1,9 @@
-SET(ITK_LIBRARY "ITKSpatialObject")
+SET(ITK_LIBRARY "ITKSpatialObjects")
 STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
 SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/Python/${ITK_LIBRARY_LANG}")
 WRITE_LANG_BEGIN(${ITK_LIBRARY_LANG})
 
-SET(WrapITK_PART_DIR "${WrapITK_BINARY_DIR}/SpatialObject")
+SET(WrapITK_PART_DIR "${WrapITK_BINARY_DIR}/SpatialObjects")
 
 #------------------------------------------------------------------------------
 # create a list of groups
@@ -17,7 +17,7 @@ AUTO_INCLUDE_WRAP_CMAKE(WRAP_GROUPS "")
 
 #------------------------------------------------------------------------------
 # create the wrap_ITKBasicFilters*.cxx files
-WRITE_MODULE("SpatialObject" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
+WRITE_MODULE("SpatialObjects" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
 
 #------------------------------------------------------------------------------
 # create the ITKBasicFilters libraries
@@ -26,11 +26,11 @@ SET(MASTER_INDEX_FILES "${WrapITK_BINARY_DIR}/VXLNumerics/VXLNumerics.mdx"
                        "${WrapITK_BINARY_DIR}/Numerics/ITKNumerics.mdx"
                        "${WrapITK_BINARY_DIR}/CommonA/ITKCommonA.mdx"
                        "${WrapITK_BINARY_DIR}/CommonB/ITKCommonB.mdx"
-                       "${WrapITK_BINARY_DIR}/SpatialObject/ITKSpatialObject.mdx"
+                       "${WrapITK_BINARY_DIR}/SpatialObjects/ITKSpatialObjects.mdx"
 )
 
-ITK_WRAP_LIBRARY("${WRAP_GROUPS}" ITKSpatialObject SpatialObject
-  "ITKNumerics;ITKCommonB;ITKCommonA" "" ""
+ITK_WRAP_LIBRARY("${WRAP_GROUPS}" ITKSpatialObjects SpatialObjects
+  "ITKNumerics;ITKCommonB;ITKCommonA" "" "ITKSpatialObject"
   "${MASTER_INDEX_FILES}" "${WrapITK_SOURCE_DIR}" "${WrapITK_BINARY_DIR}")
   
 #------------------------------------------------------------------------------
