Remove _2D and _3D cmake files and references
darcs-hash:20060111003841-733a7-e7faf86dd41f0c9dd8136bb01ffd5ef3e23747ce.gz

--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -14,8 +14,7 @@ SET(WRAP_GROUPS
     itkContinuousIndex
     itkVector
     itkPoint
-    itkImage_2D
-    itkImage_3D
+    itkImage
     itkLevelSet
     itkDefaultStaticMeshTraits
 
@@ -34,11 +33,9 @@ SET(WRAP_GROUPS
     itkImageRegionIterator
     itkImageRegionConstIterator
     itkImageSource
-    itkImageToImageFilter_2D
-    itkImageToImageFilter_3D
+    itkImageToImageFilter
     itkIndex
-    itkInPlaceImageFilter_2D
-    itkInPlaceImageFilter_3D
+    itkInPlaceImageFilter
     ITKInterpolators
     itkNeighborhood
     itkSize
