--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(WRAP_GROUPS
     itkContinuousIndex
     itkVector
     itkPoint
+    itkRGBPixel
     itkImage
     itkLevelSet
     itkDefaultStaticMeshTraits
