--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 PROJECT(WrapITK)
 
+CMAKE_MINIMUM_REQUIRED(VERSION 2.2)
+
 ###############################################################################
 # Config ITKWrap
 ###############################################################################
